--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Половинкин Андрей Дмитриевич</h1>
+            <h1>Половинкин Иван Алексеевич</h1>
             <p>Студент, группа АДБ-23-08</p>
         </div>
 
@@ -66,7 +66,7 @@
                 <li>
                     <strong>2023 - настоящее время</strong><br>
                     Студент группы АДБ-23-08<br>
-                    Московский технологический университет
+                    Московский Государственный Технологический Университет "СТАНКИН"
                 </li>
             </ul>
         </div>
@@ -103,3 +103,4 @@
     </div>
 </body>
 </html>
+
