--- a/index.html
+++ b/index.html
@@ -42,49 +42,14 @@
         .section li {
             margin-bottom: 10px;
         }
-        
-        /* Стили для кнопки */
-        .special-button {
-            display: block;
-            width: 200px;
-            margin: 20px auto;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        
-        /* Стили для появляющегося текста */
-        #badboy-message {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.7);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            font-size: 100px;
-            font-weight: bold;
-            text-transform: uppercase;
-        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>Половинкин Иван Алексеевич</h1>
+            <h1>Половинкин Андрей Дмитриевич</h1>
             <p>Студент, группа АДБ-23-08</p>
         </div>
-
-        <!-- Добавляем кнопку -->
-        <button class="special-button" onclick="showBadboyMessage()">Нажми меня!</button>
 
         <div class="section">
             <h2>Контактная информация</h2>
@@ -95,18 +60,46 @@
             </ul>
         </div>
 
-        <!-- Остальные секции остаются без изменений -->
+        <div class="section">
+            <h2>Образование</h2>
+            <ul>
+                <li>
+                    <strong>2023 - настоящее время</strong><br>
+                    Студент группы АДБ-23-08<br>
+                    Московский технологический университет
+                </li>
+            </ul>
+        </div>
 
+        <div class="section">
+            <h2>Навыки</h2>
+            <ul>
+                <li>HTML/CSS</li>
+                <li>Базовые знания JavaScript</li>
+                <li>Работа с Git</li>
+                <li>Английский язык (B1)</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Опыт работы</h2>
+            <ul>
+                <li>
+                    <strong>Стажер-разработчик</strong><br>
+                    Технопарк, Москва<br>
+                    Июнь 2024 - Август 2024
+                </li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Интересы</h2>
+            <ul>
+                <li>Веб-разработка</li>
+                <li>Киберспорт</li>
+                <li>Фотография</li>
+            </ul>
+        </div>
     </div>
-
-    <!-- Контейнер для сообщения -->
-    <div id="badboy-message">Я BADBOY</div>
-
-    <script>
-        function showBadboyMessage() {
-            const message = document.getElementById('badboy-message');
-            message.style.display = 'flex';
-        }
-    </script>
 </body>
 </html>
