--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Резюме — Половинкин Иван Алексеевич</title>
 
-  <!-- Шрифты -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
   <style>
@@ -13,59 +12,73 @@
       --bg: #0d0d12;
       --card: #18181f;
       --muted: #b3b3c9;
-      --accent: #ff4da6; /* розовый */
-      --accent2: #ff80bf; /* мягкий розовый для градиентов */
-      --radius: 14px;
-      --maxw: 900px;
-      --gap: 22px;
+      --accent: #ff4da6;
+      --accent2: #ff80bf;
+      --text: #f5f5f7;
+    }
+    body.light {
+      --bg: #fff5fa;
+      --card: #ffffff;
+      --muted: #555;
+      --accent: #ff3399;
+      --accent2: #ff66b2;
+      --text: #222;
     }
 
     * {box-sizing: border-box;}
     body {
       margin: 0;
       font-family: "Inter", sans-serif;
-      background: linear-gradient(180deg, #0d0d12 0%, #15151c 100%);
-      color: #f5f5f7;
+      background: var(--bg);
+      color: var(--text);
       -webkit-font-smoothing: antialiased;
-      padding: 0;
     }
 
-    /* Заголовок страницы */
     .page-header {
       background: linear-gradient(135deg, var(--accent) 0%, var(--accent2) 100%);
       color: white;
       text-align: center;
       padding: 40px 20px;
       font-family: "Playfair Display", serif;
+      position: relative;
     }
-    .page-header h1 {
-      margin: 0;
-      font-size: 32px;
-      letter-spacing: 1px;
-    }
-    .page-header p {
-      margin: 6px 0 0;
-      font-size: 15px;
-      opacity: 0.9;
-    }
+    .page-header h1 {margin: 0; font-size: 32px;}
+    .page-header p {margin: 6px 0 0; font-size: 15px; opacity: 0.9;}
 
-    /* Основная сетка */
+    .theme-toggle, .apply-btn {
+      position: absolute;
+      top: 15px;
+      padding: 8px 14px;
+      border: none;
+      border-radius: 8px;
+      background: rgba(255,255,255,0.2);
+      color: white;
+      font-size: 13px;
+      cursor: pointer;
+    }
+    .theme-toggle { right: 15px; }
+    .apply-btn { left: 15px; background: rgba(0,0,0,0.25); }
+
     .container {
-      width: 100%;
-      max-width: var(--maxw);
+      max-width: 900px;
       margin: -30px auto 40px;
       background: var(--card);
-      border-radius: var(--radius);
+      border-radius: 14px;
       padding: 28px;
       display: grid;
       grid-template-columns: 1fr 300px;
-      gap: var(--gap);
-      box-shadow: 0 8px 30px rgba(0,0,0,0.6);
+      gap: 22px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.3);
     }
 
     .main {padding-right: 12px;}
-    .side {position: relative;}
-
+    .card {
+      background: var(--card);
+      border-radius: 12px;
+      padding: 16px;
+      margin-bottom: 18px;
+      border: 1px solid rgba(255,255,255,0.05);
+    }
     h2.section-title {
       font-size: 14px;
       color: var(--accent);
@@ -73,17 +86,6 @@
       margin: 0 0 12px;
       letter-spacing: 1px;
     }
-
-    .card {
-      background: #1f1f27;
-      border-radius: 12px;
-      padding: 16px;
-      margin-bottom: 18px;
-      border: 1px solid rgba(255,255,255,0.05);
-    }
-
-    .summary {font-size: 14px; line-height: 1.5;}
-
     .skills {display: flex; flex-wrap: wrap; gap: 10px;}
     .skill {
       background: rgba(255,77,166,0.15);
@@ -93,14 +95,11 @@
       color: var(--accent2);
       border: 1px solid rgba(255,77,166,0.25);
     }
-
     .project {margin-bottom: 12px;}
-    .project .p-title {font-weight: 600; color: white; margin-bottom: 4px;}
+    .project .p-title {font-weight: 600; margin-bottom: 4px;}
     .project .p-desc {font-size: 14px; color: var(--muted);}
-
     .contact-list {display: flex; flex-direction: column; gap: 8px; font-size: 14px;}
     .contact-item strong {color: var(--accent); min-width: 70px; display: inline-block;}
-
     .interests {display: flex; flex-direction: column; gap: 8px;}
     .interest-pill {
       padding: 8px 10px;
@@ -108,19 +107,65 @@
       font-size: 13px;
       background: rgba(255,77,166,0.12);
       border: 1px solid rgba(255,77,166,0.25);
-      color: white;
       display: inline-block;
     }
-
     footer {margin-top: 10px; font-size: 12px; color: var(--muted); text-align: center;}
+    @media (max-width: 820px) {.container {grid-template-columns: 1fr;}}
 
-    @media (max-width: 820px) {
-      .container {grid-template-columns: 1fr;}
+    /* Модальное окно */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: var(--card);
+      padding: 20px;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 400px;
+      color: var(--text);
+    }
+    .modal-content h3 {
+      margin-top: 0;
+      color: var(--accent);
+    }
+    .modal-content label {
+      display: block;
+      margin: 10px 0 5px;
+      font-size: 14px;
+    }
+    .modal-content input, .modal-content textarea {
+      width: 100%;
+      padding: 8px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-family: inherit;
+    }
+    .modal-content button {
+      margin-top: 12px;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 6px;
+      background: var(--accent);
+      color: white;
+      cursor: pointer;
+    }
+    .close-btn {
+      background: #999;
+      margin-left: 8px;
     }
   </style>
 </head>
 <body>
   <header class="page-header">
+    <button class="apply-btn" onclick="openModal()">Оставить отклик</button>
+    <button class="theme-toggle" onclick="toggleTheme()">Сменить тему</button>
     <h1>Половинкин Иван Алексеевич</h1>
     <p>Студент МГТУ «СТАНКИН» · инженерия и технологии</p>
   </header>
@@ -129,16 +174,16 @@
     <div class="main">
       <section class="card">
         <h2 class="section-title">О себе</h2>
-        <p class="summary">Ответственный и увлечённый студент, интересуюсь инженерными технологиями, современным дизайном и разработкой практичных решений. Легко обучаюсь новому, люблю командную работу и стремлюсь к профессиональному росту.</p>
+        <p>Ответственный и увлечённый студент, интересуюсь инженерными технологиями и дизайном. Легко обучаюсь новому, люблю командную работу и стремлюсь к профессиональному росту.</p>
       </section>
 
       <section class="card">
         <h2 class="section-title">Навыки</h2>
         <div class="skills">
           <span class="skill">CAD-моделирование</span>
-          <span class="skill">Чертежи и 3D-печать</span>
-          <span class="skill">Python (данные)</span>
-          <span class="skill">C++ (базовый)</span>
+          <span class="skill">3D-печать</span>
+          <span class="skill">Python</span>
+          <span class="skill">C++</span>
           <span class="skill">Презентации</span>
         </div>
       </section>
@@ -182,5 +227,45 @@
   <footer>
     © 2025 · Половинкин Иван Алексеевич
   </footer>
+
+  <!-- Модальное окно -->
+  <div class="modal" id="feedbackModal">
+    <div class="modal-content">
+      <h3>Оставить отклик</h3>
+      <label for="name">Имя</label>
+      <input type="text" id="name" placeholder="Ваше имя" />
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="example@mail.com" />
+      <label for="msg">Сообщение</label>
+      <textarea id="msg" rows="4" placeholder="Ваше сообщение"></textarea>
+      <div>
+        <button onclick="submitFeedback()">Отправить</button>
+        <button class="close-btn" onclick="closeModal()">Закрыть</button>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function toggleTheme() {
+      document.body.classList.toggle("light");
+    }
+    function openModal() {
+      document.getElementById("feedbackModal").style.display = "flex";
+    }
+    function closeModal() {
+      document.getElementById("feedbackModal").style.display = "none";
+    }
+    function submitFeedback() {
+      const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
+      const msg = document.getElementById("msg").value;
+      if (name && email && msg) {
+        alert("Спасибо за отклик, " + name + "!");
+        closeModal();
+      } else {
+        alert("Пожалуйста, заполните все поля.");
+      }
+    }
+  </script>
 </body>
 </html>
